# newsscraper

./: .env.example  .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt  run.py  streamlit_app.py
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/database/: db.py
app/models/: article.py
app/nlp/: __init__.py  keyword_extractor.py
app/scrapers/: __init__.py  base.py  google_scraper.py  nyt_scraper.py  openai_scraper.py  reuters_scraper.py  scraper_factory.py
